[package]
name = "bfy"
version = "0.1.0"
edition = "2021"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
license = "MIT"
description = "Brainfu*k interpreter and REPL written in Rust"
repository = "https://github.com/anas-elgarhy/bfy"
readme = "README.md"
keywords = [
    "brainfuck",
    "interpreter",
    "repl",
    "bf",
    "bf-repl",
    "brainfuck-interpreter",
    "brainfuck-repl",
]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/bfy"
homepage = "https://github.com/anas-elgarhy/bfy"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

exclude = [
    "test_code/**/*",
    "screenshots/**/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive", "color", "cargo", "wrap_help", "suggestions"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
# no-panic = "0.1.16"
console = "0.15.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
